snapshots/syntax/statements/control_flow/mod/on_gosub_inline_if.snap
---
source: src/syntax/statements/control_flow/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: IfStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: IfKeyword
                  text: If
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: needsProcessing
                - kind: Whitespace
                  text: " "
                - kind: ThenKeyword
                  text: Then
                - kind: Whitespace
                  text: " "
                - kind: OnGoSubStatement
                  children:
                    - kind: OnKeyword
                      text: "On"
                    - kind: Whitespace
                      text: " "
                    - kind: Identifier
                      text: choice
                    - kind: Whitespace
                      text: " "
                    - kind: GoSubKeyword
                      text: GoSub
                    - kind: Whitespace
                      text: " "
                    - kind: Identifier
                      text: Process1
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Identifier
                      text: Process2
                    - kind: Newline
                      text: "\n"
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: SubKeyword
                  text: Sub
                - kind: Newline
                  text: "\n"
